--- a/inun's.html
+++ b/inun's.html
@@ -1,93 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
-    <link rel="shortcut icon" href="https://drive.google.com/file/d/1eenaJhH7DZWKALLigxY8ZmAzNS_p6-0O/view?usp=sharing"/>
-<style>
-    body {
-    background-color: white;
-    font-family: 'Caveat', cursive;}
-.row{
-	padding: 30vw 0; 
-	width: 100%;
-	height: 30px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin : 10px 0;
-	border-top: 5px solid white;
-	border-bottom: 5px solid white;
-	flex-direction: column;
-}
-h1{
-    	font-size: 3vw;
-	margin: 4px auto;
-	text-align: center;
-	color: #161D6F;
-}
-h2{
-    	font-size: 5vw;
-	margin: 4px auto;
-	text-align: center;
-	color: #161D6F;
-}
-h3{
-	font-size: 7vw;
-	margin: 4px auto;
-	text-align: center;
-	color: #161D6F;
-}
-h4{
-	font-size: 7vw;
-	margin: 4px auto;
-	text-align: center;
-	color: #ffffff;
-}
-#k1{
-	background-color: #f5bcbc;
-}
-#k2{
-	background-color: #bcc0f5;
-}
-#k3{
-	background-color: #bcf5bf;
-}
-#k4{
-	background-color: #f4f5bc;
-}
-#k5{
-	background-color: #000000;
-}
-iframe{
-	width: 560px;
-	height:315px;
-	padding: 15px;
-	border :3px solid black;
-}
-</style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>My Profile</title>
+	<link rel="shortcut icon" href="https://drive.google.com/file/d/1eenaJhH7DZWKALLigxY8ZmAzNS_p6-0O/view?usp=sharing" />
+	<style>
+		body {
+			background-color: white;
+			font-family: 'Caveat', cursive;
+		}
+
+		.row {
+			padding: 30vw 0;
+			width: 100%;
+			height: 30px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin: 10px 0;
+			border-top: 5px solid white;
+			border-bottom: 5px solid white;
+			flex-direction: column;
+		}
+
+		h1 {
+			font-size: 3vw;
+			margin: 4px auto;
+			text-align: center;
+			color: #161D6F;
+		}
+
+		h2 {
+			font-size: 5vw;
+			margin: 4px auto;
+			text-align: center;
+			color: #161D6F;
+		}
+
+		h3 {
+			font-size: 7vw;
+			margin: 4px auto;
+			text-align: center;
+			color: #161D6F;
+		}
+
+		h4 {
+			font-size: 7vw;
+			margin: 4px auto;
+			text-align: center;
+			color: #ffffff;
+		}
+
+		#k1 {
+			background-color: #f5bcbc;
+		}
+
+		#k2 {
+			background-color: #bcc0f5;
+		}
+
+		#k3 {
+			background-color: #bcf5bf;
+		}
+
+		#k4 {
+			background-color: #f4f5bc;
+		}
+
+		#k5 {
+			background-color: #000000;
+		}
+
+		iframe {
+			width: 560px;
+			height: 315px;
+			padding: 15px;
+			border: 3px solid black;
+		}
+	</style>
 </head>
+
 <body>
-  <div class="row" id="k1">
-      <h2>Di click dulu biar gk sepi heheh</h2>
-      <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/oAb1MhbIXPw" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <h1>kalo udah scroll hayyuu</h1>
-  </div>
-  <div class="row" id="k2">
-    <h3> QURROTUL AINUN NI'MATUS SHOLIHAH </h3>
-  </div>
-  <div class="row" id="k3">
-    <h3> 193100056 </h3>
-  </div>
-  <div class="row" id="k4">
-    <h3> SISTEM INFORMASI </h3>
-  </div>
-  <div class="row" id="k5">
-    <h4> THIS MY PROFILE </h4>
-  </div>
+	<div class="row" id="k1">
+		<h2>Di click dulu biar gk sepi heheh</h2>
+		<div>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/oAb1MhbIXPw" frameborder="0"
+				allowfullscreen></iframe>
+		</div>
+		<h1>kalo udah scroll hayyuu</h1>
+	</div>
+	<div class="row" id="k2">
+		<h3> QURROTUL AINUN NI'MATUS SHOLIHAH </h3>
+	</div>
+	<div class="row" id="k3">
+		<h3> 193100056 </h3>
+	</div>
+	<div class="row" id="k4">
+		<h3> SISTEM INFORMASI </h3>
+	</div>
+	<div class="row" id="k5">
+		<h4> THIS MY PROFILE </h4>
+	</div>
 </body>
+
 </html>
